# IN5060_A3

./: .gitignore  Grading_Criteria.md  Notebook Stats - Task 1 - Delay.ipynb  Notebook Stats - Task 1 - Difficulty.ipynb  Notebook Stats _ Task 2.ipynb  Notebook Stats _ Tasks Both.ipynb  Notebook Stats.ipynb  Notebook.ipynb  alt_statistics.py  anova_fnc.py  comprehensive_stats.csv  comprehensive_stats_delay_overall.csv  pyproject.toml  task_one_control_gender_stats.csv  todo.md
Line graphs/: .~lock.male.xlsx#  linegraphs.py  male.xlsx  test.py
Violingraphs/: .~lock.Male.xlsx#  .~lock.old.xlsx#  Female.xlsx  Male.xlsx  comparison.py  old.xlsx  violingraph.py  young.xlsx
anovatesting/: Two way anova results between age, delay for difficulty response.xlsx  anova.py  check.xlsx  ci.pi.txt  ci.py  testing.py
data/: README.md  questionnaire_data-561422-2025-11-17-1240.xlsx
docs/: Numpy Variance Calculation Explanation.md  Statistics Export Feature.md  Variance Type Options Summary.md  calculate_statistics() documentation.md
fig/: variance_plot.py
out_csv/: difficulty_by_task_and_gender.csv
out_csv/delay MF/: comprehensive_stats_delay_overall.csv
out_csv/delay MF-AGE/: comprehensive_stats_delay_overall.csv
out_csv/difficulty MF/: .~lock.comprehensive_stats_delay_overall.csv#  ANOVA and Tukey.csv  comprehensive_stats_delay0.csv  comprehensive_stats_delay1.csv  comprehensive_stats_delay2.csv  comprehensive_stats_delay3.csv  comprehensive_stats_delay4.csv  (+3 more)
out_csv/difficulty MF-AGE/: comprehensive_stats_delay_overall.csv
tests/: test_variance_plot.py
(+9 files in other folders)
