[project]
name = "in9060-as2"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Tarlton",email = "michaelt@oslomet.no"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyxdf",
    "numpy (>=2.3.3,<3.0.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "ipython",
    "ipykernel",
    "scipy",
    "matplotlib",
    "cvxopt",
    "osqp",
    "tqdm",
    "pyyaml",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings",
    "mkdocs",
    "mike",
    "plotly",
    "nbformat",
    "pandas (>=2.3.3,<3.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "in9060-as2"
version = "0.1.0"
description = ""
authors = ["Michael Tarlton <michaelt@oslomet.no>"]
readme = "README.md"
package-mode = false
